bk_ida/gobmkida/g0/purge_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_reading_cache/src/engine/persistent.c:686:6: error: use of undeclared identifier 'last_purge_position_number_1'
if ( last_purge_position_number_1 != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_reading_cache/src/engine/persistent.c:688:1: error: use of undeclared identifier 'last_purge_position_number_1'
last_purge_position_number_1 = position_number; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/purge_persistent_reading_cache/src/obj/1/persistent.o] Error 1
